--- a/src/app/css/grid.module.css
+++ b/src/app/css/grid.module.css
@@ -1,7 +1,7 @@
 .grid {
   display: grid;
-  grid-template-rows: repeat(9, 50px);
-  grid-template-columns: repeat(9, 50px);
+  grid-template-rows: repeat(10, 50px); /* 9 + 1 pour les en-têtes */
+  grid-template-columns: repeat(10, 50px); /* 9 + 1 pour les en-têtes */
   justify-content: center;
   align-items: center;
 }
@@ -24,4 +24,11 @@
   height: 10px;
   background-color: red;
   border-radius: 50%;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
 }
