--- a/src/app/css/grid.module.css
+++ b/src/app/css/grid.module.css
@@ -26,6 +26,13 @@
   border-radius: 50%;
 }
 
+.city {
+  width: 20px;
+  height: 20px;
+  background-color: blue;
+  border-radius: 50%;
+}
+
 .header {
   display: flex;
   justify-content: center;
